--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout code
+        uses: actions/checkout@v4
+      -
+        name: Get current date
+        id: date
+        run: echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -24,4 +31,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: torshdev/meteor-launchpad:latest
+          tags: |
+            torshdev/meteor-launchpad:${{ steps.date.outputs.DATE }}
