--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,11 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v4
       -
-        name: Get current date
+        name: Get current date and generate hash
         id: date
-        run: echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        run: |
+          echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "HASH=$(openssl rand -hex 6)" >> $GITHUB_OUTPUT
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -32,4 +34,4 @@ jobs:
         with:
           push: true
           tags: |
-            torshdev/meteor-launchpad:${{ steps.date.outputs.DATE }}
+            torshdev/meteor-launchpad:${{ steps.date.outputs.DATE }}-${{ steps.date.outputs.HASH }}
